manifests/seraphim/prod/komga/Deployment-komga.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: komga
    app.kubernetes.io/name: komga
    app.kubernetes.io/part-of: komga
    app.kubernetes.io/version: 1.24.3
  name: komga
  namespace: komga
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: komga
      app.kubernetes.io/name: komga
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: main
        app.kubernetes.io/instance: komga
        app.kubernetes.io/name: komga
        app.kubernetes.io/part-of: komga
        app.kubernetes.io/version: 1.24.3
    spec:
      containers:
        - env:
            - name: KOMGA_OAUTH2ACCOUNTCREATION
              value: "true"
            - name: KOMGA_OIDCEMAILVERIFICATION
              value: "false"
            - name: SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_POCKETID_ISSUERURI
              value: https://id.vegapunk.cloud
            - name: SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_POCKETID_USERNAMEATTRIBUTE
              value: preferred_username
            - name: SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_POCKETID_AUTHORIZATIONGRANTTYPE
              value: authorization_code
            - name: SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_POCKETID_CLIENTID
              valueFrom:
                secretKeyRef:
                  key: client-id
                  name: oidc
            - name: SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_POCKETID_CLIENTNAME
              value: Pocket ID
            - name: SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_POCKETID_CLIENTSECRET
              valueFrom:
                secretKeyRef:
                  key: client-secret
                  name: oidc
            - name: SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_POCKETID_PROVIDER
              value: pocketid
            - name: SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_POCKETID_REDIRECTURI
              value: '{baseUrl}/{action}/oauth2/code/{registrationId}'
            - name: SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_POCKETID_SCOPE
              value: openid,email,profile
          image: ghcr.io/gotson/komga:1.24.3
          name: komga
          ports:
            - containerPort: 25600
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /mnt/manga
              name: media
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsUser: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: media
          nfs:
            path: /mnt/nami-01/media/manga
            readOnly: false
            server: nami.int.scarey.me
