manifests/seraphim/prod/komga/Service-komga.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: komga
    app.kubernetes.io/name: komga
    app.kubernetes.io/part-of: komga
    app.kubernetes.io/version: 1.24.3
  name: komga
  namespace: komga
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: komga
